# research-kit

./: .gitignore  README.md  V4_TESTING_STATUS.md  config.json  pyproject.toml  requirements-dev.txt  requirements.txt  research
.claude/skills/: research-workflow.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml
agents/: __init__.py  ideation.py  runner.py  synthesis.py
agents/personas/: __init__.py  contrarian.md  creative-maverick.md  edge-hunter.md  macro-strategist.md  quant-archaeologist.md  report-synthesizer.md  synthesis-director.md
agents/prompts/: challenge_consensus.md  interpret_results.md  suggest_combinations.md  synthesize_strategies.md
data-registry/: qc_object_store.json  registry.json
data-registry/internal/: purchased.json
docs/: ARCHITECTURE.md  COMMANDS.md  DEVELOPMENT_PRINCIPLES.md  IMPROVEMENTS.md  REBUILD-STATUS.md  USER_JOURNEY.md  USER_JOURNEYS.md  V2-STATUS.md
docs/design/: BUILD.md  DESIGN-DECISIONS.md  IMPLEMENTATION-PLAN.md  PERSONA-REVIEW-CONSOLIDATED.md  PERSONA-SOURCE-QUALITY.md  VISION.md
research_system/: __init__.py
research_system/agents/: ideation.py  runner.py  synthesis.py
research_system/agents/personas/: data-integrator.md  instrument-specialist.md  mad-genius.md  momentum-trader.md  portfolio-architect.md  quant-researcher.md  regime-strategist.md  risk-manager.md
research_system/agents/prompts/: __init__.py  generate_ideas.md
research_system/cli/: __init__.py  main.py
research_system/codegen/: __init__.py  cli.py  engine.py  filters.py  generator.py  strategy_generator.py  v4_generator.py
research_system/codegen/templates/: __init__.py  base.py.j2  breakout.py.j2  dual_momentum.py.j2  mean_reversion.py.j2  momentum_rotation.py.j2  regime_rotation.py.j2  trend_following.py.j2
research_system/codegen/templates/v4/: __init__.py  base.py.j2  mean_reversion.py.j2  momentum.py.j2  options_income.py.j2  regime_adaptive.py.j2
research_system/core/: __init__.py  catalog.py  data_registry.py  workspace.py
research_system/core/v4/: __init__.py  config.py  logging.py  workspace.py
research_system/data/: __init__.py  qc_native.json
research_system/data/internal/: curated.json
research_system/db/: __init__.py  catalog_manager.py  connection.py  schema.sql
research_system/ingest/: __init__.py  data_extractor.py  extractor.py  processor.py  strategy_processor.py  v4_processor.py
research_system/llm/: __init__.py  client.py
research_system/optimization/: __init__.py  optimizer.py  reporting.py  walk_forward.py
research_system/schemas/: __init__.py  common.py  proposal.py  regime.py  strategy.py  validation.py
research_system/schemas/v4/: __init__.py  ingestion.py  strategy.py  validation.py
research_system/scripts/backtest/: __init__.py  run_backtest.py
research_system/scripts/catalog/: add_entry.py  generate_index.py  migrate_from_master_index.py  query.py
research_system/scripts/combinations/: __init__.py  generate_matrix.py  prioritize.py
research_system/scripts/data/: check_availability.py
research_system/scripts/develop/: run_phase3_analysis.py
research_system/scripts/status/: __init__.py
research_system/scripts/utils/: qc_client.py  schema_validator.py
research_system/scripts/validate/: __init__.py  data_audit.py  full_pipeline.py  orchestrator.py  regime_analysis.py  sanity_checks.py  statistical_analysis.py  walk_forward.py
research_system/synthesis/: __init__.py  context.py  output.py  prompts.py  quality_gate.py  runner.py
research_system/validation/: __init__.py  backtest.py  ideator.py  learner.py  runner.py  v4_runner.py  validator.py  verifier.py
schemas/: backtest-result.schema.json  catalog-entry.schema.json  data-source.schema.json  hypothesis.schema.json  persona-output.schema.json  synthesis-output.schema.json  validation-result.schema.json
scripts/: __init__.py
scripts/backtest/: __init__.py  run_backtest.py
scripts/catalog/: add_entry.py  query.py
scripts/combinations/: __init__.py  generate_matrix.py  prioritize.py
scripts/data/: check_availability.py
scripts/develop/: __init__.py  classifier.py  generate_variants.py  run_screening.py  run_walk_forward.py  workflow.py
scripts/status/: __init__.py  generate_reports.py
scripts/utils/: __init__.py  logging_config.py
scripts/validate/: __init__.py  data_audit.py  full_pipeline.py  orchestrator.py  regime_analysis.py  sanity_checks.py  statistical_analysis.py  walk_forward.py
templates/: base_algorithm.py.j2  filter_test.py.j2
tests/: __init__.py  conftest.py
tests/integration/: test_cli.py
tests/unit/: test_catalog.py  test_data_extractor.py  test_data_registry.py  test_llm_client.py  test_processor.py  test_workspace.py
tests/v4/: __init__.py  test_cli.py  test_config.py  test_error_correction.py  test_logging.py  test_non_interactive_develop.py  test_optimizer.py  test_options_template.py  test_schema.py  test_synthesis.py  test_tunable_parameters.py  test_v4_backtest.py  test_v4_codegen.py  test_v4_ingest.py  test_v4_integration.py  test_v4_list.py  test_v4_runner.py  test_v4_show.py  test_v4_status.py  test_walk_forward.py  test_walk_forward_reporting.py  test_workspace.py
tests_v2/: __init__.py  test_catalog_manager.py  test_codegen_cli.py  test_codegen_engine.py  test_codegen_golden.py  test_common.py  test_db_connection.py  test_generator.py  test_golden.py  test_schemas.py  test_templates.py  test_validation.py
tests_v2/fixtures/: __init__.py  sample_strategies.py
tests_v2/fixtures/golden/: strategy_tier1_momentum.json
tests_v2/fixtures/golden/codegen/: breakout.py  dual_momentum.py  (+3 more)
v4/: ARCHITECTURE.md  DISCUSSION-SOURCE-QUALITY.md  PERSONA-STRATEGY-FINDING.md  SCHEMA.md  TEST-CASES.md
