[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-kit"
version = "0.1.0"
description = "Research Validation System CLI for trading strategies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Research System"}
]
keywords = ["trading", "validation", "research", "backtesting", "quantconnect"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "jsonschema>=4.0.0",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
research = "research_system.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/your-repo/research-kit"
"Bug Tracker" = "https://github.com/your-repo/research-kit/issues"

[tool.setuptools]
packages = ["research_system", "research_system.cli", "research_system.core", "research_system.ingest", "research_system.llm", "agents", "scripts", "scripts.validate", "scripts.utils", "scripts.data", "scripts.catalog", "scripts.backtest", "scripts.combinations"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.j2"]
"schemas" = ["*.json"]
"agents.personas" = ["*.md"]
"agents.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
