[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-kit"
version = "0.1.0"
description = "Research Validation System CLI for trading strategies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Research System"}
]
keywords = ["trading", "validation", "research", "backtesting", "quantconnect"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "jsonschema>=4.0.0",
    "anthropic>=0.30.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
research = "research_system.cli.main:main"
research-codegen = "research_system.codegen.cli:main"

[project.urls]
"Homepage" = "https://github.com/your-repo/research-kit"
"Bug Tracker" = "https://github.com/your-repo/research-kit/issues"

[tool.setuptools]
packages = ["research_system", "research_system.cli", "research_system.core", "research_system.ingest", "research_system.llm", "research_system.schemas", "research_system.db", "research_system.codegen", "research_system.codegen.templates", "agents", "agents.personas", "agents.prompts", "scripts", "scripts.validate", "scripts.utils", "scripts.data", "scripts.catalog", "scripts.backtest", "scripts.combinations"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.j2"]
"schemas" = ["*.json"]
"agents.personas" = ["*.md"]
"agents.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
# Exclude legacy v1 code - will be replaced by v2
exclude = [
    "agents/",
    "scripts/",
    "research_system/cli/",
    "research_system/core/",
    "research_system/ingest/",
    "research_system/llm/",
    "tests/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled separately

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
# Only check new v2 code
exclude = [
    "agents/",
    "scripts/",
    "research_system/cli/",
    "research_system/core/",
    "research_system/ingest/",
    "research_system/llm/",
    "tests/",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.coverage.run]
source = ["research_system/schemas", "research_system/db", "research_system/codegen"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 90
show_missing = true
